Fix page index alignment (#531)
* Remove movement of dropdown menus

* Remove box shadow of buttons for cleaner look

* Make the navbar white and sidebar lighter grey

* Add hover indication to links in sidebar

* WIP: improve page index alignment

* Align page index

* Fix page index alignment

* Remove commented css

* Small fix, as it was not totally aligned yet

* Revert "Merge branch 'Theme_update' into Fix-Page-Index-alignment"

This reverts commit 19a2bd2a614221985c980d2b956de3def7dd1649, reversing
changes made to b3677b5a790cb6e25affbd10bbb73937696e06d7.

* Reduced gap to 5px

* Fix misalignment of long names

--- a/otterwiki/static/css/partials/sidebar.css
+++ b/otterwiki/static/css/partials/sidebar.css
@@ -138,6 +138,9 @@ a.sidebar-toc-6 { padding-left: calc(7 * var(--spacing) - var(--radius) - 13px);
     box-sizing: inherit;
     overflow-wrap: anywhere;
     list-style: none;
+    display: flex;
+    align-items: baseline;
+    gap: 5px
 }
 
 .sidebarmenu li > div.summary-details > a {
@@ -162,6 +165,7 @@ a.sidebar-toc-6 { padding-left: calc(7 * var(--spacing) - var(--radius) - 13px);
     list-style: none;
     display: flex;
     align-items: baseline;
+    gap: 5px
 }
 
 .sidebarmenu details > summary::-webkit-details-marker {
@@ -171,23 +175,20 @@ a.sidebar-toc-6 { padding-left: calc(7 * var(--spacing) - var(--radius) - 13px);
 .sidebarmenu details > summary::before {
     width: 1.3rem;
     flex-shrink: 0;
-    content: '▹ ';
+    content: '▹';
 }
 
 .sidebarmenu details[open] > summary::before {
     width: 1.3rem;
     flex-shrink: 0;
-    content: '▿ ';
+    content: '▿';
 }
 
 .sidebar-menu .summary-details::before {
     width: 1.3rem;
     display: inline-block;
-    content: '□ ';
-    font-size: 0.5rem;
-    vertical-align: middle;
-    position: relative;
-    bottom: 0.1rem;
+    flex-shrink: 0;
+    content: '';
 }
 
 .sidebar-menu li {
